--- a/src/Components/CreatePostForm/_CreatePostForm.scss
+++ b/src/Components/CreatePostForm/_CreatePostForm.scss
@@ -7,6 +7,8 @@
   flex-direction: column;
   background-color: white;
   padding: 50px;
+  box-shadow: 0 0 5px black;
+  border-radius: 3px;
 
   .TextAndImage {
     display: flex;
