--- a/src/Pages/CreatePostPage/CreatePostPage.scss
+++ b/src/Pages/CreatePostPage/CreatePostPage.scss
@@ -1,8 +1,36 @@
 .CreatePostPage {
-  background-color: #b6514b;
+  background-color: $bg-color;
   color: white;
   height: fit-content;
   width: 100vw;
   text-align: center;
   padding: 30px;
+  position: relative;
+
+  .publish-btn {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    padding: 20px 40px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 5px black, inset 1px 1px 2px white;
+    background-color: transparent;
+    /* background: linear-gradient(to bottom, #b6514b, rgb(52, 52, 52)); */
+    color: white;
+    font-weight: bold;
+    font-size: 2em;
+    border: none;
+    text-shadow: 2px 2px 2px black;
+    transition: background-color 0.3s ease-out;
+    cursor: pointer;
+
+    &:hover {
+      /*  */
+      background-color: #c1c1c13a;
+      /* color: rgb(43, 43, 43); */
+    }
+    &:active {
+      box-shadow: 2px 2px 5px white, inset 1px 1px 2px black;
+    }
+  }
 }
