--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import "./Styles/_colors.scss";
 @import "./Pages/CreatePostPage/CreatePostPage.scss";
 @import "./Components/CreatePostForm/_CreatePostForm.scss";
 
