--- a/src/Components/CreatePostForm/_CreatePostForm.scss
+++ b/src/Components/CreatePostForm/_CreatePostForm.scss
@@ -43,7 +43,7 @@
       width: 50%;
       /* height: 250px; */
       height: auto;
-      background-color: rgba(199, 199, 199, 0.63);
+      background-color: #8e8e8e;
       border: 1px solid black;
       border-radius: 5px;
       /* box-shadow: 2px 2px 5px black; */
