--- a/src/Components/CreatePostForm/_CreatePostForm.scss
+++ b/src/Components/CreatePostForm/_CreatePostForm.scss
@@ -47,6 +47,36 @@
       border: 1px solid black;
       border-radius: 5px;
       /* box-shadow: 2px 2px 5px black; */
+      position: relative;
+
+      #image {
+        display: none;
+      }
+
+      .choose-file-lable {
+        font-size: 30px;
+        font-weight: bold;
+        padding: 5px 15px;
+        border: 0px solid black;
+        border-radius: 10px;
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        background-color: rgba(83, 83, 83, 0.342);
+        box-shadow: 2px 2px 2px black, inset 1px 1px 2px white,
+          inset -2px -2px 2px black;
+        transition: all 0.3s;
+        cursor: pointer;
+
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.366);
+        }
+
+        &:active {
+          box-shadow: 0px 0px 2px black, inset 2px 2px 2px black,
+            inset -2px -2px 2px white;
+        }
+      }
     }
   }
 
