--- a/src/Components/CreatePostForm/_CreatePostForm.scss
+++ b/src/Components/CreatePostForm/_CreatePostForm.scss
@@ -49,32 +49,47 @@
       /* box-shadow: 2px 2px 5px black; */
       position: relative;
 
+      .image-error {
+        padding: 20px 30px;
+        background-color: black;
+        color: red;
+        font-size: 1.3em;
+        display: none;
+      }
+
+      .show {
+        display: block;
+      }
+
       #image {
         display: none;
       }
 
       .choose-file-lable {
-        font-size: 30px;
-        font-weight: bold;
-        padding: 5px 15px;
-        border: 0px solid black;
-        border-radius: 10px;
         position: absolute;
         bottom: 10px;
         right: 10px;
-        background-color: rgba(83, 83, 83, 0.342);
-        box-shadow: 2px 2px 2px black, inset 1px 1px 2px white,
-          inset -2px -2px 2px black;
-        transition: all 0.3s;
+        padding: 10px;
+        text-align: center;
+        border-radius: 5px;
+        box-shadow: 1px 1px 2px black, inset 1px 1px 2px white;
+        background-color: rgb(100, 131, 143);
+        /* background: linear-gradient(to bottom, #b6514b, rgb(52, 52, 52)); */
+        color: white;
+        text-shadow: 1px 1px 2px black;
+        font-weight: bold;
+        border: none;
+        /* text-shadow: 2px 2px 1px black; */
+        transition: background-color 0.3s ease-out;
         cursor: pointer;
 
         &:hover {
-          background-color: rgba(0, 0, 0, 0.366);
+          /*  */
+          background-color: rgb(121, 158, 172);
+          /* color: rgb(43, 43, 43); */
         }
-
         &:active {
-          box-shadow: 0px 0px 2px black, inset 2px 2px 2px black,
-            inset -2px -2px 2px white;
+          box-shadow: 2px 2px 5px white, inset 1px 1px 2px black;
         }
       }
     }
