--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
 @import "./Styles/_colors.scss";
 @import "./Pages/CreatePostPage/CreatePostPage.scss";
 @import "./Components/CreatePostForm/_CreatePostForm.scss";
+@import "./Components/Modal/Modal";
+@import "./Components/Menu/Menu";
 
 * {
   margin: 0;
