--- a/src/Components/CreatePostForm/_CreatePostForm.scss
+++ b/src/Components/CreatePostForm/_CreatePostForm.scss
@@ -52,9 +52,10 @@
       .image-error {
         padding: 20px 30px;
         background-color: black;
-        color: red;
+        color: rgb(208, 0, 0);
         font-size: 1.3em;
         display: none;
+        font-weight: bold;
       }
 
       .show {
@@ -71,6 +72,7 @@
         right: 10px;
         padding: 10px;
         text-align: center;
+        border: 1px solid black;
         border-radius: 5px;
         box-shadow: 1px 1px 2px black, inset 1px 1px 2px white;
         background-color: rgb(100, 131, 143);
@@ -78,7 +80,6 @@
         color: white;
         text-shadow: 1px 1px 2px black;
         font-weight: bold;
-        border: none;
         /* text-shadow: 2px 2px 1px black; */
         transition: background-color 0.3s ease-out;
         cursor: pointer;
