--- a/src/Components/Menu/_Menu.scss
+++ b/src/Components/Menu/_Menu.scss
@@ -1,28 +1,42 @@
 .Menu {
   position: fixed;
-  bottom: 30px;
-  right: 20px;
+  bottom: 0px;
+  right: 0px;
+  padding: 20px 10px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 10px;
+  background-color: rgb(80, 80, 80);
+  height: 100%;
+  box-shadow: -2px 0px 5px black;
+
+  .button-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 
   .menu-btn {
+    width: 200px;
     padding: 10px 20px;
     border-radius: 10px;
     box-shadow: 2px 2px 5px black, inset 1px 1px 2px white;
     background-color: rgba(121, 158, 172, 0.678);
     /* background: linear-gradient(to bottom, #b6514b, rgb(52, 52, 52)); */
-    color: rgb(56, 56, 56);
+    color: white;
     font-weight: bold;
     font-size: 1.3em;
     border: none;
-    /* text-shadow: 2px 2px 1px black; */
-    transition: background-color 0.3s ease-out;
+    text-shadow: 1px 1px 2px black;
+    transition: all 0.3s ease-out;
     cursor: pointer;
 
     &:hover {
       /*  */
       background-color: #c1c1c13a;
+      letter-spacing: 1px;
+
       /* color: rgb(43, 43, 43); */
     }
     &:active {
