--- a/src/Components/CreatePostForm/_CreatePostForm.scss
+++ b/src/Components/CreatePostForm/_CreatePostForm.scss
@@ -49,49 +49,17 @@
       /* box-shadow: 2px 2px 5px black; */
       position: relative;
 
-      .image-error {
+      /* .image-error {
         padding: 20px 30px;
         background-color: black;
         color: rgb(208, 0, 0);
         font-size: 1.3em;
         display: none;
         font-weight: bold;
-      }
+      } */
 
       .show {
         display: block;
-      }
-
-      #image {
-        display: none;
-      }
-
-      .choose-file-lable {
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-        padding: 10px;
-        text-align: center;
-        border: 1px solid black;
-        border-radius: 5px;
-        box-shadow: 1px 1px 2px black, inset 1px 1px 2px white;
-        background-color: rgb(100, 131, 143);
-        /* background: linear-gradient(to bottom, #b6514b, rgb(52, 52, 52)); */
-        color: white;
-        text-shadow: 1px 1px 2px black;
-        font-weight: bold;
-        /* text-shadow: 2px 2px 1px black; */
-        transition: background-color 0.3s ease-out;
-        cursor: pointer;
-
-        &:hover {
-          /*  */
-          background-color: rgb(121, 158, 172);
-          /* color: rgb(43, 43, 43); */
-        }
-        &:active {
-          box-shadow: 2px 2px 5px white, inset 1px 1px 2px black;
-        }
       }
     }
   }
