kan skicka mail till subscribers

--- a/src/Components/CreatePostForm/_CreatePostForm.scss
+++ b/src/Components/CreatePostForm/_CreatePostForm.scss
@@ -12,6 +12,7 @@
 
   .TextAndImage {
     display: flex;
+    //flex-direction: row-reverse;
     justify-content: space-between;
     gap: 30px;
     width: 100%;
